manifests/perses/components/talos/0.22.0/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: perses
  labels:
    shared-gateway-access: "true"
