manifests/perses/components/talos/0.22.0/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: perses
  labels:
    app.kubernetes.io/name: perses
    app.kubernetes.io/instance: perses
    app.kubernetes.io/version: v0.53.1
    app.kubernetes.io/part-of: perses
    app.kubernetes.io/component: workload
spec:
  replicas: 1
  serviceName: perses-headless
  selector:
    matchLabels:
      app.kubernetes.io/name: perses
      app.kubernetes.io/instance: perses
  template:
    metadata:
      labels:
        app.kubernetes.io/name: perses
        app.kubernetes.io/instance: perses
      annotations:
        checksum/config: c0ce3681967b45308f8609513abfaca191f207a070b8f78bc5f9a75e0ae41629
    spec:
      serviceAccountName: perses
      securityContext:
        fsGroup: 2000
      containers:
      - name: perses
        image: "docker.io/persesdev/perses:v0.53.1"
        imagePullPolicy: IfNotPresent
        args:
          - --config=/etc/perses/config/config.yaml
          - --web.listen-address=:8080
          - --web.hide-port=false
          - --web.telemetry-path=/metrics
          - --log.level=info
          - --log.method-trace=true
        volumeMounts:
          - name: config
            mountPath: "/etc/perses/config"
          - name: data
            mountPath: /perses
        ports:
          - name: http
            containerPort: 8080
        readinessProbe:
          httpGet:
            path: /api/v1/health
            port: http
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /api/v1/health
            port: http
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 60
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
      volumes:
        - name: data
          emptyDir: {}
        - name: config
          configMap:
            defaultMode: 420
            name: perses
