manifests/perses/components/talos/0.22.0/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: perses
  labels:
    app.kubernetes.io/name: perses
    app.kubernetes.io/instance: perses
    app.kubernetes.io/version: v0.53.1
    app.kubernetes.io/part-of: perses
    app.kubernetes.io/component: networking
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: perses
    app.kubernetes.io/instance: perses
