manifests/perses/components/talos/0.22.0/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: perses-http-route
  labels:
    app.kubernetes.io/name: perses
    app.kubernetes.io/instance: perses
    app.kubernetes.io/version: v0.53.1
    app.kubernetes.io/part-of: perses
    app.kubernetes.io/component: networking
  annotations:
    external-dns.alpha.kubernetes.io/hostname: monitoring.nhlabs.org
spec:
  parentRefs:
    - name: shared-gateway
      namespace: shared-gateway
      sectionName: https
  hostnames:
    - "monitoring.nhlabs.org"
  rules:
    -
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: perses
          port: 8080
